# apps/backend/src/modules/invoice/domain/entities/invoice.entity.ts
@@ -1,0 +1,36 @@
+export interface InvoiceItem {
+  id: string
+  name: string
+  quantity: number
+  rate: number
+}
+
+export interface Invoice {
+  id: string
+  invoiceNumber: string
+  invoiceReference?: string
+  invoiceDate: Date
+  dueDate: Date
+  currency: string
+  currencySymbol: string
+  description?: string
+  status: string
+
+  customerName: string
+  customerEmail: string
+  customerMobile?: string
+  customerAddress?: string
+
+  taxRate: number
+  invoiceSubTotal: number
+  totalTax: number
+  totalDiscount: number
+  totalAmount: number
+  totalPaid: number
+  balanceAmount: number
+
+  createdBy: string
+  items: InvoiceItem[]
+
+  createdAt: Date
+}
